# etf-universe

./: .env.sample  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-31-etf-universe.md
docs/superpowers/specs/: 2026-03-31-etf-universe-design.md
src/etf_universe/: cli.py  contracts.py  normalization.py  profile.py  registry.py  runtime_logging.py  storage.py  validation.py
src/etf_universe/providers/: __init__.py  ark.py  base.py  first_trust.py  invesco.py  ishares.py  ssga.py  vaneck.py
tests/: test_cli_fetch.py  test_cli_list_supported.py  test_config.py  test_docs.py  test_normalization.py  test_readme.py  test_registry.py  test_storage.py  test_validation.py
tests/providers/: test_ark.py  test_base.py  test_first_trust.py  test_invesco.py  test_ishares.py  test_ssga.py  test_vaneck.py
